# aether-launcher

./: .gitignore  Cargo.toml
src/: main.rs
static/: index.html  index.js  styles.css
