[package]
name = "Aether-launcher"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
glib = "0.20"
gio = "0.20"
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
webkit6 = "0.4"
chrono = "0.4"
hyprland = "0.4.0-beta.1"
battery = "0.7.8"
machine-info = "1.0.9"
nix = { version = "0.29", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"